--- a/trib.html
+++ b/trib.html
@@ -22,9 +22,7 @@
         />
         <!-- User Story #5: Within the img-div element, I should see an element with a corresponding id="img-caption" that contains textual content describing the image shown in img-div. -->
         <figcaption id="img-caption"><em>
-          He looked like a man cut away from the stake, when the fire has
-          overrunningly wasted all the limbs without consuming them, or taking
-          away one particle from their compacted aged robustness.</em>
+          He looked like a man cut away from the stake, when the fire has overrunningly wasted all the limbs without consuming them, or taking away one particle from their compacted aged robustness.</em>
         </figcaption>
       </figure>
       <!-- User Story #6: I should see an element with a corresponding id="tribute-info", which contains textual content describing the subject of the tribute page. -->
@@ -32,35 +30,12 @@
         <h2 class="call-me">Call me Ishmael.</h2>
         <p>
             <blockquote>
-          He’s a queer man, Captain Ahab—so some think—but a good one. Oh,
-          thou’lt like him well enough; no fear, no fear. He’s a grand, ungodly,
-          god-like man, Captain Ahab; doesn’t speak much; but, when he does
-          speak, then you may well listen. Mark ye, be forewarned; Ahab’s above
-          the common; Ahab’s been in colleges, as well as ’mong the cannibals;
-          been used to deeper wonders than the waves; fixed his fiery lance in
-          mightier, stranger foes than whales. His lance! aye, the keenest and
-          the surest that out of all our isle! Oh! he ain’t Captain Bildad; no,
-          and he ain’t Captain Peleg; he’s Ahab, boy; and Ahab of old, thou
-          knowest, was a crowned king!”
+              He’s a queer man, Captain Ahab—so some think—but a good one. Oh, thou’lt like him well enough; no fear, no fear. He’s a grand, ungodly, god-like man, Captain Ahab; doesn’t speak much; but, when he does speak, then you may well listen. Mark ye, be forewarned; Ahab’s above the common; Ahab’s been in colleges, as well as ’mong the cannibals; been used to deeper wonders than the waves; fixed his fiery lance in mightier, stranger foes than whales. His lance! aye, the keenest and the surest that out of all our isle! Oh! he ain’t Captain Bildad; no, and he ain’t Captain Peleg; he’s Ahab, boy; and Ahab of old, thou knowest, was a crowned king!”
           </blockquote>
         </p>
         <p>
             <blockquote>
-          He looked like a man cut away from the stake, when the fire has
-          overrunningly wasted all the limbs without consuming them, or taking
-          away one particle from their compacted aged robustness. His whole
-          high, broad form, seemed made of solid bronze, and shaped in an
-          unalterable mould, like Cellini’s cast Perseus. Threading its way out
-          from among his grey hairs, and continuing right down one side of his
-          tawny scorched face and neck, till it disappeared in his clothing, you
-          saw a slender rod-like mark, lividly whitish. It resembled that
-          perpendicular seam sometimes made in the straight, lofty trunk of a
-          great tree, when the upper lightning tearingly darts down it, and
-          without wrenching a single twig, peels and grooves out the bark from
-          top to bottom, ere running off into the soil, leaving the tree still
-          greenly alive, but branded. Whether that mark was born with him, or
-          whether it was the scar left by some desperate wound, no one could
-          certainly say.
+              He looked like a man cut away from the stake, when the fire has overrunningly wasted all the limbs without consuming them, or taking away one particle from their compacted aged robustness. His whole high, broad form, seemed made of solid bronze, and shaped in an unalterable mould, like Cellini’s cast Perseus. Threading its way out from among his grey hairs, and continuing right down one side of his tawny scorched face and neck, till it disappeared in his clothing, you saw a slender rod-like mark, lividly whitish. It resembled that perpendicular seam sometimes made in the straight, lofty trunk of a great tree, when the upper lightning tearingly darts down it, and without wrenching a single twig, peels and grooves out the bark from top to bottom, ere running off into the soil, leaving the tree still greenly alive, but branded. Whether that mark was born with him, or whether it was the scar left by some desperate wound, no one could certainly say.
           </blockquote>
         </p>
         <p>
